--- a/backend/package.json
+++ b/backend/package.json
@@ -7,18 +7,23 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "keywords": ["microbazar", "ventas", "compras", "inventario"],
+  "keywords": [
+    "microbazar",
+    "ventas",
+    "compras",
+    "inventario"
+  ],
   "author": "Jeremy Abrahan Masabanda Paucar",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.11"
   }
 }
